# bibel

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  bibel_compile.go  main.go
src/: main.rs
src/web_bible/: eng-web_002_GEN_01_read.txt  eng-web_002_GEN_26_read.txt  eng-web_003_EXO_01_read.txt  eng-web_003_EXO_03_read.txt  eng-web_003_EXO_06_read.txt  eng-web_003_EXO_07_read.txt  eng-web_003_EXO_09_read.txt  (+561 more)
web_bible/: copr.htm  eng-web_002_GEN_43_read.txt  eng-web_003_EXO_04_read.txt  eng-web_003_EXO_05_read.txt  eng-web_003_EXO_08_read.txt  eng-web_003_EXO_12_read.txt  eng-web_003_EXO_20_read.txt  eng-web_003_EXO_22_read.txt  eng-web_003_EXO_23_read.txt  eng-web_003_EXO_25_read.txt  eng-web_003_EXO_29_read.txt  eng-web_003_EXO_30_read.txt  eng-web_003_EXO_32_read.txt  eng-web_003_EXO_33_read.txt  eng-web_003_EXO_35_read.txt  eng-web_003_EXO_36_read.txt  eng-web_003_EXO_39_read.txt  eng-web_004_LEV_04_read.txt  eng-web_004_LEV_05_read.txt  eng-web_004_LEV_07_read.txt  eng-web_004_LEV_09_read.txt  eng-web_004_LEV_18_read.txt  eng-web_004_LEV_20_read.txt  eng-web_005_NUM_02_read.txt  eng-web_005_NUM_03_read.txt  eng-web_005_NUM_04_read.txt  eng-web_005_NUM_05_read.txt  eng-web_005_NUM_06_read.txt  eng-web_005_NUM_09_read.txt  eng-web_005_NUM_10_read.txt  eng-web_005_NUM_13_read.txt  eng-web_005_NUM_14_read.txt  eng-web_005_NUM_16_read.txt  eng-web_005_NUM_17_read.txt  eng-web_005_NUM_23_read.txt  eng-web_005_NUM_24_read.txt  eng-web_005_NUM_25_read.txt  eng-web_005_NUM_28_read.txt  eng-web_005_NUM_29_read.txt  eng-web_005_NUM_33_read.txt  (+288 more)
