[package]
name = "bibel"
authors = ["Maxwell Jensen <maxwelljensen@posteo.net>"]
version = "1.1.0"
licence = "EUPL 1.2"
readme = "README.md"
repository = "https://www.github.com/maxwelljens/bibel"
keywords = ["bible", "cli", "utility"]
edition = "2021"

[dependencies]
colored = "2"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
rayon = "1.5"
rust-embed = "6.3.0"
